<resources>
    <string name="app_name">Inventory</string>

    <string name="unit">\u0020Unit(s)\u0009</string>  <!-- \0020 is the unicode for space while \u0009 is the unicode for tab -->

    <string name="sale">Sale</string>

    <string name="product_name">Product Name</string>

    <string name="unit_price">Unit Price</string>

    <string name="quantity">Quantity</string>

    <string name="supplier_name">Supplier Name</string>

    <string name="supplier_phone">Supplier Phone</string>

    <string name="order">Order</string>

    <string name="edit">Edit</string>

    <string name="delete">Delete</string>

    <string name="no_data">No Data Entered Yet</string>

    <string name="cancel">Cancel</string>

    <string name="error">Error</string>

    <string name="deleted">Deleted Successfully</string>

    <string name="inserted">Inserted Successfully</string>

    <string name="add_new">Add New Product</string>

    <string name="edit_existing">Edit Existing Product</string>

    <string name="updated">Updated Successfully</string>

    <string name="no_phone">No phone number available for that customer</string>
</resources>
